[BT-154] Improved BEM compliance, simplified HTML structure. Fixed master checkbox vertical alignement

--- a/src/framework/checkBox/_index.scss
+++ b/src/framework/checkBox/_index.scss
@@ -1,7 +1,7 @@
 $checkedColor: tint(scale-saturation($blue, 30%), 5%);
 
 .checkboxWrapper {
-  display: inline-block;
+  display: inline-flex;
   vertical-align: middle;
 }
 
