--- a/src/framework/grid/controls/filters/_gridFilters.scss
+++ b/src/framework/grid/controls/filters/_gridFilters.scss
@@ -1,7 +1,10 @@
-.grid__filtersContainer {
+.gridFilters {
   display: flex;
+}
 
-  > div {
+  .gridFilter,
+  .gridFilter__add,
+  .gridFilter__ellipsis {
     display: flex;
     align-items: center;
     height: 26px;
@@ -14,56 +17,48 @@
     cursor: default;
     color: $componentTextColor;
   }
-}
 
-  .grid__filter {
-    // Filter name
-    strong {
-      font-weight: 400;
-    }
-
-    .remove {
-      display: flex;
-      margin-left: -$iconSide;
-      cursor: pointer;
-      background: shade(scale-saturation($componentBackgroundColor, 60%), 3%);
-      box-shadow: -10px 0 5px shade(scale-saturation($componentBackgroundColor, 60%), 3%);
-      opacity: 0;
-    }
-
-    &:hover .remove {
-      opacity: 1;
-    }
-  }
-
-    .filterTitle {
+    .gridFilter__text {
       max-width: 100px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
     }
 
-  .grid__addFilter {
-    box-shadow: 60px 0 0 $componentBackgroundColor, 40px 0 0 $componentBackgroundColor;
-
-    a {
-      font-size: 16px;
-      color: $componentTextColor;
-    }
-  }
-
-    .grid__ellipsis .icon {
-      $gridFilterEllipsis_iconSize: 12px;
-      font-size: $gridFilterEllipsis_iconSize;
-      width: $gridFilterEllipsis_iconSize;
-      height: $gridFilterEllipsis_iconSize;
-      cursor: pointer;
-
-      &:before {
-        opacity: 0.6;
+      .gridFilter__name {
+        font-weight: 400;
       }
 
-      &:hover:before {
+    .gridFilter__remove {
+      display: flex;
+      margin-left: -$iconSide;
+      cursor: pointer;
+      background: shade(scale-saturation($componentBackgroundColor, 60%), 3%);
+      box-shadow: -10px 0 5px shade(scale-saturation($componentBackgroundColor, 60%), 3%);
+      color: $linkColor;
+      opacity: 0;
+
+      .gridFilter:hover & {
         opacity: 1;
       }
     }
+
+  .gridFilter__add {
+    font-size: 16px;
+    box-shadow: 60px 0 0 $componentBackgroundColor, 40px 0 0 $componentBackgroundColor;
+    cursor: pointer;
+  }
+
+  .gridFilter__ellipsis .icon {
+    font-size: 12px;
+    width: auto;
+    cursor: pointer;
+
+    &:before {
+      opacity: 0.6;
+    }
+
+    &:hover:before {
+      opacity: 1;
+    }
+  }
